# myMscProject

./: CMakeLists.txt  README.md
include/: Application.h  Camera.h  Controls.h  Material.h  Mesh.h  Object.h  Shader.h  Texture.h
lib/assimp/code/: BlenderLoader.cpp  IFCBoolean.cpp  LWOLoader.cpp  ObjFileMtlImporter.cpp  PretransformVertices.cpp  SpatialSort.cpp  XFileParser.cpp
lib/assimp/contrib/clipper/: clipper.cpp
lib/assimp/contrib/poly2tri/poly2tri/sweep/: sweep_context.cc  sweep_context.h
lib/assimp/contrib/zlib/: crc32.c  deflate.c  deflate.h  gzlib.c  gzwrite.c  inflate.c  inftrees.c  zlib.h
shaders/: default.frag  default.vert  renderVoxels.frag  renderVoxels.vert  shadow.frag  shadow.vert  voxelization.frag  voxelization.geom  voxelization.vert
src/: Application.cpp  Camera.cpp  Controls.cpp  Material.cpp  Mesh.cpp  Object.cpp  main.cpp
x64/Debug/: vc143.idb
x64/Debug/my_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  my_Project.lastbuildstate
